# RelPyDB

./: BENCHMARK.py  LICENSE  README.md  benchmark_database.relpy.json  pyproject.toml  test_database.relpy.json
.github/ISSUE_TEMPLATE/: documentation.md  improvement.md
docs/: ide.html  index.html  installation.html  script.js  styles.css
docs/assets/: alternatives.html  capabilities.html  data-operations.html  encryption.html  exports.html  grouping.html  index.html  joins.html  python-integration.html  quickstart.html  tables-schema.html  tutorial-shop.html  views.html  why-relpy.html
docs/docs/: api-functions.html  api-reference.html  concepts.html  errors-limitations.html  examples.html  indexes.html  persistence.html  querying.html  recipes.html  start-here.html
docs/labs/: exports.html  joins.html
relpy/: __init__.py  encryption.py  exceptions.py  grouping.py  indexes.py  joins.py  persistence.py  queries.py  tables.py
